# minimal-fidl

./: .gitignore  Cargo.toml  LICENSE  pyproject.toml
.github/workflows/: python_build.yml
minimal-fidl-cli/: Cargo.toml
minimal-fidl-cli/src/: fmt.rs  main.rs
minimal-fidl-collect/src/: annotation.rs  attribute.rs  enum_value.rs  enumeration.rs  fidl_file.rs  fidl_project.rs  file_wrapper.rs  import_model.rs  import_namespace.rs  interface.rs  lib.rs  method.rs  package.rs  structure.rs  type_collection.rs  type_def.rs  variable_declaration.rs  version.rs
minimal-fidl-formatter/: Cargo.toml
minimal-fidl-formatter/src/: formatter.rs  indented_string.rs  lib.rs
minimal-fidl-generator/: Cargo.toml
minimal-fidl-generator/common_python/: built_in_fidl_types.py
minimal-fidl-generator/src/: codegen_js.rs  codegen_py.rs  codegen_rust.rs  codegen_trait.rs  indented_string.rs  lib.rs  test.rs
minimal-fidl-generator/tests/test_fidls/: test1.fidl  test2.fidl
minimal-fidl-parser/: Cargo.toml  grammar.dsl
minimal-fidl-parser/src/: main.rs  parser.rs  rules.rs  source.rs
minimal-fidl-parser/tests/: shared.rs  test_annotation_block.rs  test_attribute.rs  test_enumeration.rs  test_grammar.rs  test_import_model.rs  test_import_namespace.rs  test_interface.rs  test_method.rs  test_numbers.rs  test_package.rs  test_structs.rs  test_type_ref.rs  test_typecollection.rs
minimal-fidl-parser/tests/grammar_test_files/: 01-EmptyInterface.fidl  01-Minimal.fidl  05-CoverageInterface.fidl  05-EmptyTypeCollection.fidl  06-MoreEmptyTypeCollections.fidl  07-EmptyTypeCollectionWithMeta.fidl  07-InlineArrayInterface.fidl  10-EmptyInterface.fidl  10-TypesInTypeCollection.fidl  Astronomy_rr.fidl  Astronomy_t.fidl
minimal-fidl-python/: Cargo.toml  README.md  pyproject.toml
minimal-fidl-python/franca_idl/: __init__.py  franca_idl_rs.pyi
minimal-fidl-python/src/: lib.rs
minimal-fidl-python/tests/: test_def.py  test_fidl_file.py
minimal-fidl-symbol-table/: Cargo.toml
minimal-fidl-symbol-table/src/: attribute.rs  enum_value.rs  enumeration.rs  fidl_file.rs  import_model.rs  import_namespace.rs  interface.rs  lib.rs  method.rs  package.rs  structure.rs  symbol_table.rs  symbol_table_builder.rs  type_collection.rs  type_def.rs  variable_declaration.rs  version.rs
test-grammar-proc-macro/src/: lib.rs
