[workspace]
resolver = "2"
members = [ "minimal-fidl-parser", 
            "minimal-fidl-formatter", 
            "test-grammar-proc-macro", 
            "minimal-fidl-cli",
            "minimal-fidl-collect", 
            "minimal-fidl-generator",
            ]




[profile.dev]
panic = "unwind"
debug = true

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"