[tool.poetry]
name = "minimal-fidl"
version = "0.1.0"
description = ""
authors = ["TimMeiwald <tim.meiwald@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
maturin = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
