[package]
name = "minimal-fidl-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
minimal-fidl-parser = {path = "../minimal-fidl-parser"}
minimal-fidl-formatter = {path = "../minimal-fidl-formatter"}
thiserror = "2.0.11"
