[package]
name = "minimal-fidl-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
minimal-fidl-collect = {path = "../minimal-fidl-collect"}
minimal-fidl-parser = {path = "../minimal-fidl-parser"}

serde = { version = "1.0.218", features = ["derive"] } 
serde_json = "1.0.140"
binary_serde = {version = "1.0.24", features = ["std"]}

[dev-dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
binary_serde = {version = "1.0.24", features = ["std"]}